Bug 382116 - konsole does not set KONSOLE_DBUS_WINDOW in sessions started with D-Bus
Summary: konsole does not set KONSOLE_DBUS_WINDOW in sessions started with D-Bus
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.3
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-07-08 07:41 UTC by July Tikhonov
Modified: 2025-01-10 02:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description July Tikhonov 2017-07-08 07:41:13 UTC
Normally, bash running in konsole has some related variables exported:

$ env | grep KONSOLE
KONSOLE_DBUS_SERVICE=:1.285
KONSOLE_PROFILE_NAME=Profile 1
KONSOLE_DBUS_WINDOW=/Windows/1
KONSOLE_DBUS_SESSION=/Sessions/11

However, when I start a new session with qdbus:

$ qdbus ${KONSOLE_DBUS_SERVICE} ${KONSOLE_DBUS_WINDOW} newSession

in the new session one of the variables, KONSOLE_DBUS_WINDOW, is unavailable:

$ env | grep KONSOLE
KONSOLE_DBUS_SERVICE=:1.285
KONSOLE_PROFILE_NAME=Profile 1
KONSOLE_DBUS_SESSION=/Sessions/19

Always reproducible.
If I start a new session by regular means, such as shortcut or menu, the variable is available.
Comment 1 Kurt Hindenburg 2017-07-08 19:55:42 UTC
Thanks, also in master
Comment 2 Kurt Hindenburg 2017-07-08 20:44:31 UTC
Git commit 51cc49e95ebde8fde3f2cace9cf00cecf4b3da1e by Kurt Hindenburg.
Committed on 08/07/2017 at 20:43.
Pushed by hindenburg into branch 'master'.

Set KONSOLE_DBUS_WINDOW for new sessions started with DBus

M  +4    -0    src/ViewManager.cpp

https://commits.kde.org/konsole/51cc49e95ebde8fde3f2cace9cf00cecf4b3da1e