Set KONSOLE_DBUS_WINDOW for new sessions started with DBus

BUG: 382116